--- a/services/notifications/src/static/overlay.html
+++ b/services/notifications/src/static/overlay.html
@@ -1,44 +1,33 @@
-<!-- services/notifications/src/static/overlay.html -->
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <title>StreamHive Overlay</title>
-  <style>
-    html, body { margin:0; height:100%; background:transparent; }
-    .toast {
-      position: fixed; top: 60px; right: 60px;
-      background: rgba(50,50,55,.9); color: #fff; padding: 12px 18px;
-      border-radius: 12px; font: 16px/1.2 system-ui, sans-serif;
-      box-shadow: 0 10px 30px rgba(0,0,0,.25); opacity: 0; transform: translateY(-10px);
-      transition: all .25s ease; display:flex; gap:10px; align-items:center;
-    }
-    .toast.show { opacity:1; transform: translateY(0); }
-    .dot { width:12px; height:12px; border-radius:9999px; background:#16a34a; }
-  </style>
-</head>
-<body>
-  <div id="tray"></div>
-  <script>
-    const qs = new URLSearchParams(location.search);
-    const creatorId = qs.get('creator_id') || 'creator:alpha';
-    const ws = new WebSocket(`ws://${location.host}/ws?creator_id=${encodeURIComponent(creatorId)}`);
+﻿<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Overlay</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+      .toast { position: fixed; left: 1rem; bottom: 1rem; background:#111; color:#fff; padding:.75rem 1rem; border-radius:.5rem; box-shadow:0 4px 12px rgba(0,0,0,.3); display:flex; gap:.5rem; align-items:center; }
+      .toast .dot { width:.6rem; height:.6rem; background:#4ade80; border-radius:999px; display:inline-block; }
+      .toast .text { white-space:pre-wrap; }
+    </style>
+  </head>
+  <body>
+    <script>
+      function pushToast(text) {
+        const el = document.createElement('div');
+        el.className = 'toast';
 
-    function pushToast(text) {
-      const el = document.createElement('div');
-      el.className = 'toast';
-      el.innerHTML = `<span class="dot"></span><span>${text}</span>`;
-      document.body.appendChild(el);
-      requestAnimationFrame(()=> el.classList.add('show'));
-      setTimeout(()=> { el.classList.remove('show'); setTimeout(()=> el.remove(), 300); }, 3500);
-    }
+        const dot = document.createElement('span');
+        dot.className = 'dot';
+        el.appendChild(dot);
 
-    ws.addEventListener('message', (evt)=>{
-      try {
-        const msg = JSON.parse(evt.data);
-        if (msg.type === 'toast') pushToast(msg.text);
-      } catch {}
-    });
-  </script>
-</body>
+        const msg = document.createElement('span');
+        msg.className = 'text';
+        msg.textContent = String(text);
+        el.appendChild(msg);
+
+        document.body.appendChild(el);
+        setTimeout(() => el.remove(), 3000);
+      }
+    </script>
+  </body>
 </html>
